--- a/index.html
+++ b/index.html
@@ -105,14 +105,15 @@
 
         
         img.profile-pic {
-        width: 300px;  /* 4:3 ratio */
-        height: 225px; /* 4:3 ratio */
-        border-radius: 25px; /* Equal rounded corners */
-        object-fit: cover;
-        border: 4px solid #323232;
-        margin: 20px auto;
-        display: block;
-        transition: transform 1s ease, border-color 0.8s ease;
+    width: 100%;  /* Adjust width dynamically */
+    max-width: 300px; /* Prevents excessive enlargement */
+    aspect-ratio: 4 / 3; /* Ensures 4:3 aspect ratio */
+    border-radius: 25px;
+    object-fit: cover;
+    border: 4px solid #323232;
+    margin: 20px auto;
+    display: block;
+    transition: transform 1s ease, border-color 0.8s ease;
 }
 
         img.profile-pic:hover {
