--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
 
         
         img.profile-pic {
-    width: 100%;  /* Adjust width dynamically */
-    max-width: 300px; /* Prevents excessive enlargement */
-    aspect-ratio: 4 / 3; /* Ensures 4:3 aspect ratio */
+    width: 100%;  
+    max-width: 300px;  
+    height: auto; /* Automatically adjusts height based on width */
+    aspect-ratio: 4 / 3; /* Ensures the correct 4:3 ratio */
     border-radius: 25px;
     object-fit: cover;
     border: 4px solid #323232;
