--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <h2 style="color: rgba(0, 0, 0, 0.85);">Rajat Sawant</h2> <!-- Blue color for name -->
     
         <!-- Designation -->
-        <p style="color: #333232;">Owner - Technical Head</p> <!-- Dark gray for designation -->
+        <p style="color: #333232;">Founder / Owner</p> <!-- Dark gray for designation -->
     
         <!-- Contact Info -->
         <div class="contact-info">
